--- a/apps/site/src/_pages/docs/4_spec/02_graph-module.mdx
+++ b/apps/site/src/_pages/docs/4_spec/02_graph-module.mdx
@@ -55,7 +55,7 @@ When represented as JSON schema, the 6 primitive data types are:
 
 ```json5
 {
-  $schema: "https://blockprotocol.org/types/modules/graph/data-type",
+  $schema: "https://blockprotocol.org/types/modules/graph/0.3/schema/data-type",
   kind: "dataType",
   $id: "https://blockprotocol.org/@blockprotocol/types/data-type/text/v/1",
   title: "Text",
@@ -68,7 +68,7 @@ When represented as JSON schema, the 6 primitive data types are:
 
 ```json5
 {
-  $schema: "https://blockprotocol.org/types/modules/graph/data-type",
+  $schema: "https://blockprotocol.org/types/modules/graph/0.3/schema/data-type",
   kind: "dataType",
   $id: "https://blockprotocol.org/@blockprotocol/types/data-type/number/v/1",
   title: "Number",
@@ -81,7 +81,7 @@ When represented as JSON schema, the 6 primitive data types are:
 
 ```json5
 {
-  $schema: "https://blockprotocol.org/types/modules/graph/data-type",
+  $schema: "https://blockprotocol.org/types/modules/graph/0.3/schema/data-type",
   kind: "dataType",
   $id: "https://blockprotocol.org/@blockprotocol/types/data-type/boolean/v/1",
   title: "Boolean",
@@ -94,7 +94,7 @@ When represented as JSON schema, the 6 primitive data types are:
 
 ```json5
 {
-  $schema: "https://blockprotocol.org/types/modules/graph/data-type",
+  $schema: "https://blockprotocol.org/types/modules/graph/0.3/schema/data-type",
   kind: "dataType",
   $id: "https://blockprotocol.org/@blockprotocol/types/data-type/null/v/1",
   title: "Null",
@@ -107,7 +107,7 @@ When represented as JSON schema, the 6 primitive data types are:
 
 ```json5
 {
-  $schema: "https://blockprotocol.org/types/modules/graph/data-type",
+  $schema: "https://blockprotocol.org/types/modules/graph/0.3/schema/data-type",
   kind: "dataType",
   $id: "https://blockprotocol.org/@blockprotocol/types/data-type/object/v/1",
   title: "Object",
@@ -120,7 +120,7 @@ When represented as JSON schema, the 6 primitive data types are:
 
 ```json5
 {
-  $schema: "https://blockprotocol.org/types/modules/graph/data-type",
+  $schema: "https://blockprotocol.org/types/modules/graph/0.3/schema/data-type",
   kind: "dataType",
   $id: "https://blockprotocol.org/@blockprotocol/types/data-type/empty-list/v/1",
   title: "Empty List",
