--- a/apps/site/src/_pages/docs/4_spec/02_graph-module.mdx
+++ b/apps/site/src/_pages/docs/4_spec/02_graph-module.mdx
@@ -465,6 +465,7 @@ The following error codes MAY appear as a value for `code` in an entry in the `e
 - `NOT_FOUND`: the message relied on an entity that was not found
 - `FORBIDDEN`: the message relied on permissions that the user or block does not have
 - `INVALID_INPUT`: the message relied on previous input that was missing or otherwise invalid
+- `NOT_IMPLEMENTED`: the embedding application or block does not support the requested operation
 
 Individual messages MAY specify only a subset of these codes as being valid for that message.
 
